# JAMReader

./: CMakeLists.txt  GenModel.cpp  GenModel.h  GenModelLinkDef.h  README.md  main.cpp
